[gd_scene load_steps=7 format=3 uid="uid://b45ama1t07ngc"]

[ext_resource type="Script" path="res://ui.gd" id="1_7s5c6"]
[ext_resource type="FontFile" uid="uid://bswe7irth6rn5" path="res://Assets/DS-DIGIB.TTF" id="1_bqcqs"]
[ext_resource type="Texture2D" uid="uid://bm7m40ybg7e1u" path="res://Assets/button_smile.png" id="3_yxrfe"]
[ext_resource type="Texture2D" uid="uid://bd21g58ug8qkf" path="res://Assets/button_smile_pressed.png" id="4_gijti"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lj1lo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7kurb"]
bg_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_7s5c6")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TimerPanel" type="Panel" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_lj1lo")

[node name="TimerCountLabel" type="Label" parent="PanelContainer/HBoxContainer/TimerPanel"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 1
anchors_preset = -1
offset_left = 104.0
offset_top = -14.0
offset_right = 154.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.905882, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bqcqs")
theme_override_font_sizes/font_size = 25
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinesCountPanel" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MinesCountLabel" type="Label" parent="PanelContainer/HBoxContainer/MinesCountPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 2.675
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -12.0
offset_right = -90.75
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.905882, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bqcqs")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_7kurb")
text = "100
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameStatusButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_yxrfe")
texture_pressed = ExtResource("4_gijti")

[connection signal="pressed" from="PanelContainer/HBoxContainer/GameStatusButton" to="." method="_on_game_status_button_pressed"]
